[package]
name = "starbound-noria"
version = "2.0.0"
authors = ["M. Daeva <embedmad@gmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "1.2.5"
cosmwasm-std = "1.2.5"
cosmwasm-storage = "1.2.5"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
cw20 = "1.0.1"
cw20-base = "1.0.1"
schemars = "0.8.12"
serde = "1.0.163"
thiserror = "1.0.40"
terraswap = {path = "../../packages/terraswap"}
strum = "0.24.1"
strum_macros = "0.24.3"

[dev-dependencies]
anyhow = "1.0.71"
cw-multi-test = "0.16.5"
speculoos = "0.11.0"
terraswap-factory = {path = "../../packages/terraswap_factory"}
terraswap-pair = {path = "../../packages/terraswap_pair"}
terraswap-router = {path = "../../packages/terraswap_router"}
terraswap-token = {path = "../../packages/terraswap_token"}
