[package]
name = "starbound-osmosis"
version = "2.0.0"
authors = ["M. Daeva <embedmad@gmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
bech32 = "0.9.1"
cosmwasm-schema = "1.2.5"
cosmwasm-std = "1.2.5"
cosmwasm-storage = "1.2.5"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
osmosis-std = "0.15.2"
osmosis-std-derive = "0.15.2"
schemars = "0.8.12"
serde = "1.0.163"
thiserror = "1.0.40"

[dev-dependencies]
cw-multi-test = "0.16.4"
osmosis-testing = "0.13.2"
speculoos = "0.11.0"
